--- a/src/App.css
+++ b/src/App.css
@@ -4,26 +4,114 @@
 }
 
 body {
-  background-color: white;
+  background-color: #ffb997;
+  overflow: hidden;
+}
+
+.lines{
+  margin-top: 1rem;
+  border-top: .1rem solid #000;
+  border-bottom: .1rem solid #000;
+  text-align: center;
+  position: relative;
+  padding: 1.5rem 0 1.5rem 0;
+}
+
+.overlap {
+  z-index: 1000;
+  margin-top: 1rem;
+  border-top: .1rem solid #fff;
+  border-bottom: .1rem solid #000;
+}
+
+.loop_text {
+  font-family: helvetica, arial, sans-serif;
+  font-weight: 800;
+  word-spacing: 1.2rem;
+  position: absolute; 
+  top: 50%;
+  transform: translate(0, -50%);
+  width: 250%;
+  animation-name: words;
+  animation-timing-function: linear;
+  animation-duration: 10s;
+  animation-iteration-count: infinite;
+}
+
+.invis_right {
+  position: absolute;
+  background-color: #ffb997;
+  top: 0%;
+  right: 0;
+  width: 12%;
+  height: 100%;
+}
+
+.invis_left {
+  position: absolute;
+  background-color:#ffb997;
+  top: 0;
+  left: 0;
+  width: 12%;
+  height: 100%;
 }
 
 .website {
   max-width: 100%;
+  height: 100vh;
+  overflow: hidden;
+  position: relative;
 }
 
 h1 {
-  color: rgba(0, 0, 0, 1);
-  font-size: 1.5rem;
+  font-family: 'Playfair Display', serif;
+  color: rgb(10, 3, 43,0);
+  font-size: 1.8rem;
   padding: 1rem;
   letter-spacing: -.15rem;
-  font-weight: bold;
+  font-weight: 900;
+  width: 200%;
+}
+
+.background_text {
+  position: absolute;
+  font-size: 20rem;
+  top: 38%;
+  color: rgba(117, 49, 85, 0);
+  font-family: helvetica, arial, sans-serif;
+  font-weight: 900;
+  z-index: 2;
+  animation-name: bg_text_1;
+  animation-delay: 2.3s;
+  animation-fill-mode: forwards;
+  animation-duration: .8s;
+  animation-timing-function: ease-in-out;
+  user-select: none;
+}
+
+.background_text_2 {
+  position: absolute;
+  font-size: 20rem;
+  top: 65%;
+  color: rgba(117, 49, 85, 0);
+  font-family: helvetica, arial, sans-serif;
+  font-weight: 900;
+  z-index: 2;
+  animation-name: bg_text_2;
+  animation-delay: 2.3s;
+  animation-fill-mode: forwards;
+  animation-duration: .8s;
+  animation-timing-function: ease-in-out;
+  user-select: none;
 }
 
 h2 {
+  font-family: 'Playfair Display', serif;
+  font-weight: 800;
   padding: 1rem;
-  font-size: 1.3rem;
-  letter-spacing: -.08rem;
-  color: rgba(0, 0, 0, 1);
+  font-size: 1.5rem;
+  letter-spacing: -.03rem;
+  color: rgb(10, 3, 43,0);
 }
 
 ul {
@@ -38,11 +126,12 @@ ul {
 }
 
 li {
+  cursor: pointer;
   text-align: center;
   width:15rem;
-  cursor: pointer;
   transition: all 0.5s;
   max-width: 100%;
+  z-index: 100;
 }
 
 li:hover {
@@ -50,7 +139,8 @@ li:hover {
 }
 
 .nav {
-  color: rgba(0, 0, 0, 0);
+  color: rgb(10, 3, 43,0);
+  z-index: 100;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -60,12 +150,10 @@ li:hover {
   animation-duration: 1s;
   animation-timing-function: ease-in;
   animation-fill-mode: forwards;
-  max-width: 100%;
-  margin: 0;
 }
 
 .nav_name {
-  color: rgba(0, 0, 0, 0);
+  color: rgb(10, 3, 43,0);
   letter-spacing: -.15;
   animation-name: nav;
   animation-delay: 1.7s;
@@ -80,14 +168,14 @@ li:hover {
   left: 50%;
   transform: translate(-50%, -50%);
   background-color: rgba(0, 0, 0, 0);
-  color: rgba(0, 0, 0, 0);
+  color: rgb(10, 3, 43,0);
   padding: 1rem;
   width: 30%;
   height: 25%;
 }
 
 .animation_text {
-  color: rgba(0, 0, 0, 0);
+  color: rgb(10, 3, 43,0);
   font-size: 2rem;
   letter-spacing: -.1rem;
   font-weight: bold;
@@ -96,9 +184,6 @@ li:hover {
   left: 50%;
   transform: translate(-50%, -50%);
   text-align: center;
-}
-
-.animation {
   animation-name: animation;
   animation-delay: .5s;
   animation-duration: 1.2s;
@@ -106,7 +191,7 @@ li:hover {
 }
 
 .slide_left {
-  color: rgba(0, 0, 0, 0);
+  color: rgb(10, 3, 43,0);
   animation-name: slide_left;
   animation-duration: .8s;
   animation-timing-function: ease-in-out;
@@ -124,40 +209,40 @@ li:hover {
   animation-timing-function: ease-in-out;
   animation-fill-mode: forwards;
   background-color: rgba(0, 0, 0, 0);
-  color: rgba(255, 255, 255, 0);
+  color: rgb(10, 3, 43,0);
 }
 
 @keyframes animation {
   0% {
     letter-spacing: 1.8rem;
-    color: rgba(0, 0, 0, 1);
+    color: rgb(10, 3, 43,1);
   }
   50% {
     letter-spacing: 0;
   }
   75% {
-    color: rgba(0, 0, 0, 1);
+    color: rgb(10, 3, 43,1);
   }
   100% {
-    color: rgba(0, 0, 0, 0);
+    color: rgb(10, 3, 43,0);
   }
 }
 
 @keyframes nav {
   0% {
-    color: rgba(0, 0, 0, 0);
+    color: rgb(10, 3, 43,0);
   }
   100% {
-    color: rgba(0, 0, 0, 1);
+    color: rgb(10, 3, 43,1);
   }
 }
 
 @keyframes slide_left {
   0%{
-    color: rgba(0, 0, 0, 1);
+    color: rgb(10, 3, 43,1);
   }
   100%{
-    color: rgba(0, 0, 0, 0);
+    color: rgb(10, 3, 43,0);
     transform: translateX(-5rem);
   }
 }
@@ -176,5 +261,36 @@ li:hover {
 @keyframes slide_back {
   100%{
     color: rgba(0, 0, 0, 1);
+  }
+}
+
+@keyframes bg_text_1 {
+  from {
+    left: -20%;
+    color: rgba(117, 49, 85, 0);
+  }
+  to {
+    left: -5.6%;
+    color: rgba(117, 49, 85, 0.05);
+  }
+}
+
+@keyframes bg_text_2 {
+  from {
+    left: 30%;
+    color: rgba(117, 49, 85, 0);
+  }
+  to {
+    left: 15%;
+    color: rgba(117, 49, 85, 0.05);
+  }
+}
+
+@keyframes words {
+  from {
+    left: -75.4%;
+  }
+  to {
+    left: -149.4%;
   }
 }
