added dark mode

--- a/src/App.scss
+++ b/src/App.scss
@@ -19,7 +19,7 @@ $dark-bg-text-fill: rgba(48, 71, 94,0.05);
 
 .dark_theme {
   background-color: #222831;
-  color: #ececec;
+  color: #ececec !important;
 
   .nav_top {
     height: 5%;
