--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700;800&display=swap');
+
 * {
   padding: 0;
   margin: 0; 
@@ -10,29 +12,18 @@ $dark-button-fill: #f2a365;
 $dark-bg-text-fill: rgba(48, 71, 94,0.05);
 
 .App {
+  font-family: 'Open Sans', sans-serif;
   background-color: #ffb997;
   max-width: 100%;
   height: 100vh;
-  overflow: hidden;
+  overflow-x: hidden;
+  overflow-y: hidden;
   position: relative;
 }
 
   .nav_top {
     height: 5%;
     position: relative;
-  }
-  
-  .nightmode {
-    position: absolute;
-    top: 50%;
-    right: 10%;
-    cursor: pointer;
-    color: rgba(10, 3, 43,1);
-  }
-  
-  .nightmode span {
-    font-family: helvetica, arial, sans-serif;
-    font-weight: 300;
   }
   
   .nav_name {
@@ -57,15 +48,18 @@ $dark-bg-text-fill: rgba(48, 71, 94,0.05);
   }
   
   .footer {
-    position: absolute;
     font-weight: 300;
     font-size: .9rem;
-    bottom: 2%;
-    left: 50%;
-    transform: translate(-50%, 0);
+    text-align: center;
+    width: 100%;
+    height: 1rem;
+    margin-bottom: 1rem;
+    bottom: 0;
+    position: absolute;
   }
   
   .lines{
+    display: block;
     margin-top: 1rem;
     border-top: .1rem solid rgba(10, 3, 43,0);
     border-bottom: .1rem solid rgba(10, 3, 43,0);
@@ -88,11 +82,10 @@ $dark-bg-text-fill: rgba(48, 71, 94,0.05);
   }
   
   .loop_text {
-    font-family: helvetica, arial, sans-serif;
     font-weight: 800;
     word-spacing: 1.2rem;
     position: absolute; 
-    bottom: 25%;
+    top: 25%;
     transform: translate(0, -50%);
     animation-name: words;
     animation-timing-function: linear;
@@ -120,7 +113,9 @@ $dark-bg-text-fill: rgba(48, 71, 94,0.05);
   
   .background_text {
     position: absolute;
+    max-width: 100%;
     font-size: 20rem;
+    max-width: 100%;
     top: 38%;
     color: rgba(117, 49, 85, 0);
     font-family: helvetica, arial, sans-serif;
@@ -173,13 +168,14 @@ $dark-bg-text-fill: rgba(48, 71, 94,0.05);
   li:hover {
     transform: scale(1.1);
   }
-  
+
   .nav{
     color: rgba(10, 3, 43,0);
     z-index: 100;
     position: absolute;
     top: 50%;
     left: 50%;
+    visibility: hidden;
     transform: translate(-50%, -50%);
     animation-name: slide;
     animation-delay: 2.2s;
@@ -187,29 +183,52 @@ $dark-bg-text-fill: rgba(48, 71, 94,0.05);
     animation-timing-function: ease-in;
     animation-fill-mode: forwards;
     max-width: 100%;
+    height: auto;
+  }
+
+  .resume {
+    width: 100% !important;
+    transform: translate(0, 0) !important;
+
+    .title_resume {
+      font-weight: bold;
+      display: block;
+      font-size: 1.2rem;
+      margin-top: 3rem !important;
+    }
+
+    p {
+      max-width: 100% !important;
+      margin-top: 1.3rem !important;
+    }
+
+    .short_description {
+      font-style: italic;
+      margin-top: 1rem;
+      font-size: .7rem;
+    }
   }
   
-  .container {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+  .container_modal {
+    display: block;
+    position: relative;
+    transform: translate(0, 50%);
     background-color: rgba(235, 235, 235, 0);
     color: rgba(10, 3, 43,0);
     padding: 1rem;
-    width: 30%;
+    width: 50%;
     height: 25%;
     z-index: 5;
+    margin-top: 2rem;
   }
   
-  .container h3 {
-    position: absolute;
+  .container_modal h3 {
+    position: relative;
     color: rgba(10, 3, 43,0);
     font-family: 'Playfair Display', serif;
     font-weight: 800;
     font-size: 3rem;
-    top: -10%;
-    left: -5%;
+    left: -3%;
     animation-name: slide_left_container;
     animation-duration: .8s;
     animation-delay: .8s;
@@ -217,14 +236,14 @@ $dark-bg-text-fill: rgba(48, 71, 94,0.05);
     animation-fill-mode: forwards;
   }
   
-  .container p {
-    margin-top: 3rem;
+  .container_modal p {
+    margin-top: 1rem;
     display: block;
     max-width: 65%;
     margin-bottom: 0;
   }
   
-  .container img {
+  .container_modal img {
     position: absolute;
     right: -20%;
     max-width: 50%;
@@ -238,7 +257,7 @@ $dark-bg-text-fill: rgba(48, 71, 94,0.05);
     display: none;
   }
   
-  .container .back {
+  .container_modal .back {
     display: inline-block;
     background-color: rgba(246, 126, 125,0);
     color: rgba(10, 3, 43,0);
@@ -255,11 +274,11 @@ $dark-bg-text-fill: rgba(48, 71, 94,0.05);
     animation-fill-mode: forwards;
   }
   
-  .container .icons {
+  .container_modal .icons {
     width: 60%;
   }
   
-  .container .icons .fab {
+  .container_modal .icons .fab {
     width: 20%;
     justify-content: space-between;
     font-size: 1.4rem;
@@ -273,7 +292,7 @@ $dark-bg-text-fill: rgba(48, 71, 94,0.05);
     animation-fill-mode: forwards;
   }
   
-  .container .back:hover {
+  .container_modal .back:hover {
     transform: scale(1.1);
   }
   
@@ -319,6 +338,11 @@ $dark-bg-text-fill: rgba(48, 71, 94,0.05);
     background-color: rgba(0, 0, 0, 0);
     color: rgba(10, 3, 43,0);
   }
+
+  .resume-height {
+    height: 100%;
+    padding: 1rem;
+  }
   
   @keyframes animation {
     0% {
@@ -354,9 +378,11 @@ $dark-bg-text-fill: rgba(48, 71, 94,0.05);
   
   @keyframes slide {
     0% {
+      visibility: hidden;
       color: rgba(10, 3, 43,0);
     }
     100% {
+      visibility: visible;
       color: rgba(10, 3, 43,1);
     }
   }
@@ -441,29 +467,45 @@ $dark-bg-text-fill: rgba(48, 71, 94,0.05);
   }
   
   @media screen and (max-width: 768px) {
+    .App {
+      font-family: 'Open Sans', sans-serif;
+      background-color: #ffb997;
+      max-width: 100%;
+      height: 100vh;
+      position: relative;
+    }
+
     .lines {
       display: none;
     }
   
-    .container {
+    .container_modal {
       width: 90%;
     }
   
-    .container h3 {
+    .container_modal h3 {
       position: relative;
       top: 0;
       left: 0;
     }
   
-    .container p {
+    .container_modal p {
       max-width: 90%;
     }
   
-    .container img {
+    .container_modal img {
       display: none;
     }
   
     .nightmode span {
+      display: none;
+    }
+
+    .short_description {
+      display: none;
+    }
+
+    .footer {
       display: none;
     }
   }
