--- a/src/App.scss
+++ b/src/App.scss
@@ -60,6 +60,7 @@ $dark-bg-text-fill: rgba(48, 71, 94,0.05);
   }
   
   .lines{
+    overflow: hidden;
     display: block;
     margin-top: 1rem;
     border-top: .1rem solid rgba(10, 3, 43,0);
@@ -83,6 +84,7 @@ $dark-bg-text-fill: rgba(48, 71, 94,0.05);
   }
   
   .loop_text {
+    width: 100%;
     font-weight: 800;
     word-spacing: 1.2rem;
     position: absolute; 
@@ -187,9 +189,13 @@ $dark-bg-text-fill: rgba(48, 71, 94,0.05);
     height: auto;
   }
 
+  .resume-height {
+    overflow-x: visible;
+    width: 100%;
+  }
+
   .resume {
     transform: translate(0, 0) !important;
-    overflow: hidden !important;
     width: 100% !important;
 
     .title_resume {
@@ -250,6 +256,7 @@ $dark-bg-text-fill: rgba(48, 71, 94,0.05);
     max-width: 65%;
     margin-bottom: 0; 
     font-size: .8rem;
+    cursor: pointer;
     text-decoration: underline;
     color: rgba(10, 3, 43,0);
     animation-name: slide_left_container;
@@ -429,11 +436,11 @@ $dark-bg-text-fill: rgba(48, 71, 94,0.05);
   
   @keyframes slide_left_picture {
     0%{
-      opacity: 0;
+      visibility: hidden;
       right: -30%;
     }
     100%{
-      opacity: 100%;
+      visibility: visible;
       right: -20%;
     }
   }
@@ -484,6 +491,62 @@ $dark-bg-text-fill: rgba(48, 71, 94,0.05);
   }
   
   @media screen and (max-width: 768px) {
+    .App {
+      font-family: 'Open Sans', sans-serif;
+      background-color: #ffb997;
+      max-width: 100%;
+      height: 100vh;
+      position: relative;
+      overflow: hidden;
+    }
+
+    .lines {
+      display: none;
+    }
+
+    .resume {
+      overflow-y: scroll;
+      margin-bottom: 2rem;
+    }
+
+    .resume-height {
+      height: 100vh !important;
+    }
+  
+    .container_modal {
+      margin-bottom: 2rem;
+      height: auto;
+      width: 90%;
+    }
+  
+    .container_modal h3 {
+      position: relative;
+      top: 0;
+      left: 0;
+    }
+  
+    .container_modal p {
+      max-width: 90%;
+    }
+  
+    .container_modal img {
+      display: none;
+    }
+  
+    .nightmode span {
+      display: none;
+    }
+
+    .short_description {
+      display: none;
+    }
+
+    .footer {
+      display: none;
+    }
+  }
+
+  @media screen and (min-device-width: 768px) and (max-width: 1400px) {
     .App {
       font-family: 'Open Sans', sans-serif;
       background-color: #ffb997;
