--- a/src/App.scss
+++ b/src/App.scss
@@ -364,7 +364,7 @@ html,body, #root, .App, .content {
   .resume-height {
     overflow: visible;
     position: relative;
-    height: 100vh;
+    min-height: 100vh;
   }
   
   @keyframes animation {
@@ -506,11 +506,12 @@ html,body, #root, .App, .content {
 
     .resume-height {
       overflow-y: scroll;
+      height: 100vh;
     }
   
     .container_modal {
       width: 90%;
-      margin-bottom: 5rem;
+      padding-bottom: 10rem;
     }
   
     .container_modal h3 {
